# OpenManusN8N

./: .gitignore  README.md  mcp_agent_server.py  pyproject.toml
app/tool/: ask_human.py  browser_use_tool.py
